tests/expected/triangle.out
File "/media/ctw04578/data/projects/zen/zen/tests/triangle.zen", line 2
  import gl;
           ^
Error at ';': Unknown module.
zen: compilation failed.
